--- a/satsquare/package.json
+++ b/satsquare/package.json
@@ -6,6 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "build-socket": "tsc ./socket/*",
+    "socket": "node ./socket/index.js",
+    "all": "concurrently --kill-others \"npm run start\" \"npm run socket\"",
+    "all-dev": "concurrently --kill-others \"npm run dev\" \"npm run socket\"",
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
@@ -21,7 +25,13 @@
     "prisma": "^5.13.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.2.1"
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.2.1",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
+    "styled-components": "^6.1.11",
+    "use-sound": "^4.0.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.3.4",
@@ -37,6 +47,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.19",
+    "concurrently": "^8.2.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "eslint-plugin-storybook": "^0.8.0",
