--- a/satsquare/tsconfig.json
+++ b/satsquare/tsconfig.json
@@ -21,10 +21,16 @@
     "paths": {
       "@/*": ["./src/*"],
       "socket/*": ["./socket/*"],
-      "socket/utils/*": ["./socket/utils/*"],
-      "socket/roles/*": ["./socket/roles/*"]
+ 
     }
   },
-  "include": ["next-env.d.ts", "./socket/**/*", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "./socket/**/*",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "src/**/*"
+  ],
   "exclude": ["node_modules"]
 }
