--- a/satsquare/package.json
+++ b/satsquare/package.json
@@ -19,6 +19,7 @@
     "@emotion/react": "^11.11.4",
     "@iconscout/unicons": "^4.0.8",
     "@mui/material-nextjs": "^5.15.11",
+    "@nextui-org/tooltip": "^2.0.33",
     "@prisma/client": "^5.13.0",
     "flowbite-react": "^0.9.0",
     "next": "14.2.3",
