--- a/satsquare/package.json
+++ b/satsquare/package.json
@@ -21,6 +21,7 @@
     "@mui/material-nextjs": "^5.15.11",
     "@nextui-org/tooltip": "^2.0.33",
     "@prisma/client": "^5.13.0",
+    "bcrypt": "^5.1.1",
     "flowbite-react": "^0.9.0",
     "next": "14.2.3",
     "prisma": "^5.13.0",
@@ -44,6 +45,7 @@
     "@storybook/nextjs": "^8.0.10",
     "@storybook/react": "^8.0.10",
     "@storybook/test": "^8.0.10",
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
