--- a/satsquare/package.json
+++ b/satsquare/package.json
@@ -24,6 +24,7 @@
     "bcrypt": "^5.1.1",
     "flowbite-react": "^0.9.0",
     "next": "14.2.3",
+    "next-auth": "^4.24.7",
     "prisma": "^5.13.0",
     "react": "^18",
     "react-dom": "^18",
