--- a/satsquare/.env.exemple
+++ b/satsquare/.env.exemple
@@ -5,3 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://satsquare_user:satsquare_password@db:5432/satsquare_db"
+NEXTAUTH_SECRET=exemple
