--- a/satsquare/package.json
+++ b/satsquare/package.json
@@ -22,14 +22,17 @@
     "@nextui-org/tooltip": "^2.0.33",
     "@prisma/client": "^5.13.0",
     "bcrypt": "^5.1.1",
+    "date-fns": "^3.6.0",
     "flowbite-react": "^0.9.0",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "prisma": "^5.13.0",
     "react": "^18",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
+    "react-select": "^5.8.0",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
     "styled-components": "^6.1.11",
@@ -49,6 +52,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^18",
     "@types/socket.io": "^3.0.2",
     "@types/socket.io-client": "^3.0.0",
