--- a/satsquare/package.json
+++ b/satsquare/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "seed": "ts-node prisma/seed.ts",
     "build-socket": "tsc ./socket/*",
     "socket": "node ./socket/index.js",
     "all": "concurrently --kill-others \"npm run start\" \"npm run socket\"",
@@ -17,10 +18,11 @@
   "dependencies": {
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.4",
+    "@faker-js/faker": "^8.4.1",
     "@iconscout/unicons": "^4.0.8",
     "@mui/material-nextjs": "^5.15.11",
     "@nextui-org/tooltip": "^2.0.33",
-    "@prisma/client": "^5.13.0",
+    "@prisma/client": "^5.14.0",
     "bcrypt": "^5.1.1",
     "date-fns": "^3.6.0",
     "flowbite-react": "^0.9.0",
@@ -64,6 +66,7 @@
     "postcss": "^8.4.38",
     "storybook": "^8.0.10",
     "tailwindcss": "^3.4.3",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5"
   }
 }
