--- a/satsquare/tsconfig.json
+++ b/satsquare/tsconfig.json
@@ -6,7 +6,7 @@
     "strict": true,
     "noEmit": true,
     "esModuleInterop": true,
-    "module": "esnext",
+    "module": "commonjs",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
@@ -20,8 +20,7 @@
     "baseUrl": "./",
     "paths": {
       "@/*": ["./src/*"],
-      "socket/*": ["./socket/*"],
- 
+      "socket/*": ["./socket/*"]
     }
   },
   "include": [
