--- a/satsquare/package.json
+++ b/satsquare/package.json
@@ -17,21 +17,20 @@
   },
   "dependencies": {
     "@emotion/cache": "^11.11.0",
-    "@emotion/react": "^11.11.4",
     "@faker-js/faker": "^8.4.1",
-    "@iconscout/unicons": "^4.0.8",
     "@mui/material-nextjs": "^5.15.11",
-    "@nextui-org/tooltip": "^2.0.33",
+    "@nextui-org/tooltip": "^2.0.34",
     "@prisma/client": "^5.14.0",
     "bcrypt": "^5.1.1",
-    "date-fns": "^3.6.0",
+    "clsx": "^2.1.1",
     "flowbite-react": "^0.9.0",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
-    "prisma": "^5.13.0",
-    "react": "^18",
+    "prisma": "^5.14.0",
+    "react": "^18.3.1",
+    "react-confetti": "^6.1.0",
     "react-datepicker": "^6.9.0",
-    "react-dom": "^18",
+    "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-select": "^5.8.0",
@@ -42,29 +41,29 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^1.3.4",
-    "@storybook/addon-essentials": "^8.0.10",
-    "@storybook/addon-interactions": "^8.0.10",
-    "@storybook/addon-links": "^8.0.10",
-    "@storybook/addon-onboarding": "^8.0.10",
-    "@storybook/blocks": "^8.0.10",
-    "@storybook/nextjs": "^8.0.10",
-    "@storybook/react": "^8.0.10",
-    "@storybook/test": "^8.0.10",
+    "@chromatic-com/storybook": "^1.5.0",
+    "@storybook/addon-essentials": "^8.1.4",
+    "@storybook/addon-interactions": "^8.1.4",
+    "@storybook/addon-links": "^8.1.4",
+    "@storybook/addon-onboarding": "^8.1.4",
+    "@storybook/blocks": "^8.1.4",
+    "@storybook/nextjs": "^8.1.4",
+    "@storybook/react": "^8.1.4",
+    "@storybook/test": "^8.1.4",
     "@types/bcrypt": "^5.0.2",
-    "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/node": "^20.12.13",
+    "@types/react": "^18.3.3",
     "@types/react-datepicker": "^6.2.0",
-    "@types/react-dom": "^18",
+    "@types/react-dom": "^18.3.0",
     "@types/socket.io": "^3.0.2",
     "@types/socket.io-client": "^3.0.0",
     "autoprefixer": "^10.4.19",
     "concurrently": "^8.2.2",
-    "eslint": "^8",
+    "eslint": "^8.0.0",
     "eslint-config-next": "14.2.3",
     "eslint-plugin-storybook": "^0.8.0",
     "postcss": "^8.4.38",
-    "storybook": "^8.0.10",
+    "storybook": "^8.1.4",
     "tailwindcss": "^3.4.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
