--- a/satsquare/package.json
+++ b/satsquare/package.json
@@ -26,6 +26,7 @@
     "flowbite-react": "^0.9.0",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
+    "next-qrcode": "^2.5.1",
     "prisma": "^5.14.0",
     "react": "^18.3.1",
     "react-confetti": "^6.1.0",
