--- a/satsquare/package.json
+++ b/satsquare/package.json
@@ -24,10 +24,14 @@
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
     "flowbite-react": "^0.9.0",
+    "lnurl": "^0.26.2",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "next-qrcode": "^2.5.1",
+    "passport": "^0.7.0",
+    "passport-lnurl-auth": "^1.6.0",
     "prisma": "^5.14.0",
+    "qrcode.react": "^3.1.0",
     "react": "^18.3.1",
     "react-confetti": "^6.1.0",
     "react-datepicker": "^6.9.0",
