--- a/satsquare/package.json
+++ b/satsquare/package.json
@@ -21,11 +21,13 @@
     "@emotion/cache": "^11.11.0",
     "@faker-js/faker": "^8.4.1",
     "@mui/material-nextjs": "^5.15.11",
+    "@nextui-org/theme": "^2.2.6",
     "@nextui-org/tooltip": "^2.0.34",
     "@prisma/client": "^5.14.0",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
     "flowbite-react": "^0.9.0",
+    "framer-motion": "^11.2.12",
     "lnurl": "^0.26.2",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
@@ -60,9 +62,9 @@
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^16.0.0",
     "@types/bcrypt": "^5.0.2",
-    "@types/node": "^20.14.8",
     "@types/jest": "^29.5.12",
     "@types/jest-json-schema": "^6.1.4",
+    "@types/node": "^20.14.8",
     "@types/react": "^18.3.3",
     "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^18.3.0",
