--- a/satsquare/package.json
+++ b/satsquare/package.json
@@ -1,6 +1,7 @@
 {
   "name": "satsquare",
   "version": "0.1.0",
+  "license": "MPL-2.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -43,6 +44,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-select": "^5.8.0",
+    "sharp": "^0.33.4",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
     "styled-components": "^6.1.11",
