--- a/satsquare/package.json
+++ b/satsquare/package.json
@@ -31,6 +31,7 @@
     "clsx": "^2.1.1",
     "flowbite-react": "^0.9.0",
     "framer-motion": "^11.2.12",
+    "html2canvas": "^1.4.1",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "next-qrcode": "^2.5.1",
