--- a/satsquare/package.json
+++ b/satsquare/package.json
@@ -5,12 +5,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "build": "next build ",
+    "start": "next start ",
     "seed": "ts-node prisma/seed.ts",
     "build-socket": "tsc ./socket/*",
     "socket": "node ./socket/index.js",
-    "all": "concurrently --kill-others  \"npm run start\" \"npm run socket\"",
+    "all": "concurrently --kill-others  \"npm run start \" \"npm run socket\"",
     "all-dev": "concurrently --kill-others \"npm run dev\" \"npm run socket\" ",
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
@@ -29,6 +29,7 @@
     "@prisma/client": "^5.14.0",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
     "flowbite-react": "^0.9.0",
     "framer-motion": "^11.2.12",
     "html2canvas": "^1.4.1",
