--- a/satsquare/package.json
+++ b/satsquare/package.json
@@ -33,6 +33,8 @@
     "flowbite-react": "^0.9.0",
     "framer-motion": "^11.2.12",
     "html2canvas": "^1.4.1",
+    "ioredis": "^5.4.1",
+    "lodash.debounce": "^4.0.8",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "next-qrcode": "^2.5.1",
@@ -45,6 +47,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-select": "^5.8.0",
+    "redis": "^4.7.0",
     "sharp": "^0.33.4",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
@@ -59,6 +62,7 @@
     "@testing-library/jest-dom": "^6.4.6",
     "@types/bcrypt": "^5.0.2",
     "@types/jest": "^29.5.12",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20.14.8",
     "@types/react": "^18.3.3",
     "@types/react-datepicker": "^6.2.0",
