--- a/satsquare/package.json
+++ b/satsquare/package.json
@@ -29,6 +29,7 @@
     "@prisma/client": "^5.14.0",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
+    "dns": "^0.2.2",
     "dotenv": "^16.4.5",
     "flowbite-react": "^0.9.0",
     "framer-motion": "^11.2.12",
@@ -46,6 +47,7 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
+    "react-qr-scanner": "^1.0.0-alpha.11",
     "react-select": "^5.8.0",
     "redis": "^4.7.0",
     "sharp": "^0.33.4",
