--- a/satsquare/.env.test
+++ b/satsquare/.env.test
@@ -4,6 +4,8 @@ POSTGRES_PASSWORD=test_password
 POSTGRES_DB=sat_square_test_db
 POSTGRES_PORT=5432
 DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:${POSTGRES_PORT}/${POSTGRES_DB}"
+NEXT_PUBLIC_LNURL_AUTH_PUBLIC_KEY="dsfdsfdsf"
 NEXTAUTH_SECRET="test_secret_key"
-NEXT_PUBLIC_SITE_URL="http://localhost:3001"
-NEXT_PUBLIC_SOCKET_URL="http://localhost:5158"
+NEXT_PUBLIC_SITE_URL="http://localhost:3000"
+NEXT_PUBLIC_SOCKET_URL="ws://localhost:5157"
+REDIS_URL="redis://localhost:6379"
