--- a/satsquare/package.json
+++ b/satsquare/package.json
@@ -29,7 +29,6 @@
     "@prisma/client": "^5.14.0",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
-    "dns": "^0.2.2",
     "dotenv": "^16.4.5",
     "flowbite-react": "^0.9.0",
     "framer-motion": "^11.2.12",
@@ -47,9 +46,8 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
-    "react-qr-scanner": "^1.0.0-alpha.11",
     "react-select": "^5.8.0",
-    "redis": "^4.7.0",
+    "secp256k1": "^5.0.0",
     "sharp": "^0.33.4",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
@@ -68,6 +66,7 @@
     "@types/node": "^20.14.8",
     "@types/react": "^18.3.3",
     "@types/react-datepicker": "^6.2.0",
+    "@types/secp256k1": "^4.0.6",
     "@types/socket.io": "^3.0.2",
     "@types/socket.io-client": "^3.0.0",
     "autoprefixer": "^10.4.19",
