--- a/satsquare/package.json
+++ b/satsquare/package.json
@@ -69,6 +69,7 @@
     "eslint": "^8.0.0",
     "eslint-config-next": "14.2.3",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "jest-puppeteer": "^10.0.1",
     "postcss": "^8.4.38",
     "puppeteer": "^22.12.1",
