--- a/.github/workflows/ci-cd.dev.yml
+++ b/.github/workflows/ci-cd.dev.yml
@@ -24,16 +24,12 @@ jobs:
         uses: actions/checkout@v4
         
       - name: Install dependencies
-        run: npm install
+        run: |
+            cd ./satsquare
+            npm install
         
       - name: Run dependency vulnerability scan
-        uses: oke-py/npm-audit-action@v2
-        with:
-          audit_level: moderate
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          issue_assignees: oke-py
-          issue_labels: vulnerability,test
-          dedupe_issues: true
+        uses: advanced-security/npm-audit-action@v1
       
   lint:
     runs-on: ubuntu-latest
