--- a/.github/workflows/ci-cd.dev.yml
+++ b/.github/workflows/ci-cd.dev.yml
@@ -25,8 +25,7 @@ jobs:
       - name: Install dependencies
         run: |
           cd ./satsquare
-          npm ci
-          npm update
+          npm i --package-lock-only
 
       - name: Audit npm dependencies
         uses: oke-py/npm-audit-action@v2
