--- a/.github/workflows/ci-cd.dev.yml
+++ b/.github/workflows/ci-cd.dev.yml
@@ -71,7 +71,8 @@ jobs:
         run: |
           cd ./satsquare
           npm ci
-
+          npm i jest-environment-jsdomnpm jest
+          
       - name: Run Jest Unit Tests
         run: |
           cd ./satsquare
