--- a/.github/workflows/ci-cd.dev.yml
+++ b/.github/workflows/ci-cd.dev.yml
@@ -76,7 +76,7 @@ jobs:
       - name: Run Jest Unit Tests
         run: |
           cd ./satsquare
-          npm run test:watch
+          npm run test
 
   codecov:
     needs: unit-tests
