--- a/.github/workflows/ci-cd.dev.yml
+++ b/.github/workflows/ci-cd.dev.yml
@@ -101,25 +101,25 @@ jobs:
   #       with:
   #         token: ${{ secrets.CODECOV_TOKEN }}
 
-  security:
-    # needs: codecov
-    runs-on: ubuntu-latest
-    permissions:
-      pull-requests: write
-      security-events: write
-      statuses: write
-      contents: write
-      issues: write
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-      - uses: mobb-dev/codeql-mobb-fixer-action@v1.1
-        with:
-          mobb-api-token: ${{ secrets.MOBB_API_TOKEN }}
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+  # security:
+  #   # needs: codecov
+  #   runs-on: ubuntu-latest
+  #   permissions:
+  #     pull-requests: write
+  #     security-events: write
+  #     statuses: write
+  #     contents: write
+  #     issues: write
+  #   steps:
+  #     - name: Checkout repository
+  #       uses: actions/checkout@v3
+  #     - uses: mobb-dev/codeql-mobb-fixer-action@v1.1
+  #       with:
+  #         mobb-api-token: ${{ secrets.MOBB_API_TOKEN }}
+  #         github-token: ${{ secrets.GITHUB_TOKEN }}
 
   lighthouse:
-    needs: security
+    # needs: security
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
