--- a/.github/workflows/ci-cd.dev.yml
+++ b/.github/workflows/ci-cd.dev.yml
@@ -201,16 +201,31 @@ jobs:
     runs-on: ubuntu-latest
     # needs: [stress-test]
     steps:
-      - name: Send Discord notification on success
+      - name: Notify Discord
+        uses: discord-actions/message@v2
+        with:
+          webhookUrl: ${{ secrets.DISCORD_WEBHOOK_URL }}
+          message: "On est la les BG"
+          username: "Github"
+          avatar: "https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png"
+ 
+      - name: Notify Discord
         if: success()
-        run: |
-          curl -X POST -H "Content-Type: application/json" \
-          -d '{"content": "CI/CD Dev Pipeline succeeded!"}' \
-          ${{ secrets.DISCORD_WEBHOOK_URL }}
-
-      - name: Send Discord notification on failure
+        uses: discord-actions/message@v2
+        with:
+          webhookUrl: ${{ secrets.DISCORD_WEBHOOK_URL }}
+          message: "Bah Oui ça marche mon gasr 🗺 "
+      - name: Notify Discord
         if: failure()
-        run: |
-          curl -X POST -H "Content-Type: application/json" \
-          -d '{"content": "CI/CD Dev Pipeline failed!"}' \
-          ${{ secrets.DISCORD_WEBHOOK_URL }}
+        uses: discord-actions/message@v2
+        with:
+          webhookUrl: ${{ secrets.DISCORD_WEBHOOK_URL }}
+          message: "Ops tu as glissé mon pote ☣ "
+          
+      - name: Notify Discord
+        if: ${{ always() && contains(needs.*.result, 'failure') }}
+        uses: discord-actions/message@v2
+        with:
+          webhookUrl: ${{ secrets.DISCORD_WEBHOOK_URL }}
+          message: "C'était presque bon mon kiki ! 😇 "
+ 
